# discard

./: .gitignore  3q  Cargo.toml  README.md  arch.md  test-db3  test-root1.db3  test-root2.db3  test_path.db3
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/core/: audio.rs  client.rs  ipc.rs  rtc.rs  signal.rs
core/src/database/: db.rs  init.sql  models.rs
core/src/utils/: constants.rs  debug.rs  enums.rs  errors.rs  logger.rs  types.rs
core/tests/: client.rs  db.rs  ipc.rs  main.rs  utils.rs
src/: body.rs  lib.rs  main.rs
src/core/: client.rs  ipc.rs  rtc.rs  signal.rs
src/database/: db.rs  init.sql  models.rs
src/db/: data.rs  db.rs  init.sql  models.rs
src/tests/: client.rs
src/utils/: constants.rs  debug.rs  enums.rs  errors.rs  lib.rs  logger.rs  types.rs
test-root1/: keypair
test-root2/: keypair
test-root2/blobs/: blobs.db
test-root3/: keypair
tests/: client.rs  db.rs  ipc.rs  utils.rs
tui/: go.mod
tui/cmd/api/: api.go
tui/cmd/tui/: main.go
