[package]
name = "discard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
webrtc = "0.11.0"
lazy_static = "1"
anyhow = "1.0.86"
hyper = {version = "1", features = ["full"]}
hyper-util = {version = "0.1", features = ["full"]}
http-body-util = "0.1"
