[package]
name = "discard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"
webrtc = "0.11.0"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
clap = "4.5.9"
iroh = { version = "0.21.0", default-features = false}
anyhow = "1.0"
bincode = "1.3.3"
rusqlite = "0.32.0"
tracing = {version = "0.1.40", feaatures = ["attributes"]}
tracing-appender = "0.2.3"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = "0.4"

